# 2PROG_2_CrawlerMK

./: README.md
2_CrawlerMK/: CMakeLists.txt  main.cpp
2_CrawlerMK/Crawler/: Dictionary.cpp  Dictionary.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Item.cpp  Item.hpp  Player.cpp  Player.hpp
2_CrawlerMK/Domain/: Domain.h  globals.hpp
